# Hauyne

./: .gitignore  Hauyne.sln  LICENSE  README.md
Hauyne.Bootstrap/: CMakeLists.txt  Hauyne.Bootstrap.vcxproj  dllmain.cpp
Hauyne.Bootstrap/includes/: coreclr_delegates.h  hostfxr.h
Hauyne.Injector/: Hauyne.Injector.csproj  LinuxInjector.cs  Program.cs
Hauyne.Payload/: Hauyne.Payload.csproj  Payload.cs
